--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -1,1 +1,38 @@
 /** Custom styles */
+
+
+
+.navbar {
+    position: fixed;
+    width: 100%;
+    margin-top: 4px;
+    top: 0;
+}
+
+.header-bar{
+    position: fixed;
+    width: 100%;
+    z-index: 10000;
+    top: 0;
+}
+.doks-subnavbar {
+    position: fixed !important;  
+    right: 450px  !important;
+    background-color: unset  !important;
+    z-index: 10000  !important;
+    border: none  !important;
+    margin-top: 4px;
+}
+
+.doks-subnavbar> input {
+    min-width: 400px;
+}
+
+.container-xxl>.content{
+    margin-top: 64px;
+}
+
+.hero-heading{
+    font-size: 140px !important;
+    margin-bottom: 80px;
+}
