--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,22 +1,23 @@
 {{ define "main" }}
-<section class="section container-fluid mt-n3 pb-3">
+<section class="section container-fluid mt-n3 pb-3" style="display:flex; align-items:center;">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
-      <h1 class="mt-0">{{ .Title }}</h1>
+      <h1 class="mt-0 hero-heading">{{ .Title | safeHTML }}</h1>
     </div>
-    <div class="col-lg-9 col-xl-8 text-center">
-      <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}getting-started/introduction/" role="button">Get Started</a>
+    <div class="col-lg-12 col-xl-12 text-center">
+      <p class="lead" style="margin-bottom:40px">{{ .Description | safeHTML }}</p>
+      <a class="btn btn-primary btn-lg px-4 mb-2 mt-4 mr-2" style="margin-right: 10px;" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}overview/introduction/" role="button">Start Building Functions</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2 mt-4" style="background-color: rgb(140, 160, 249); border-color: rgb(140, 160, 249);" href="https://discord.gg/zARWG8KFh5" target="_blank" role="button">Join Discord Server</a>
     </div>
   </div>
 </section>
 {{ end }}
 
 {{ define "sidebar-prefooter" }}
-<section class="section section-sm">
+<!-- <section class="section section-sm" style="margin-top: 100px;">
   <div class="container">
     
-    <!-- <div class="row justify-content-center text-center">
+    <div class="row justify-content-center text-center">
       <div class="col-lg-5">
         <h2 class="h4">Full text search</h2>
         <p>Search your Doks site with FlexSearch. Easily customize index settings and search options to your liking.</p>
@@ -29,9 +30,9 @@
         <h2 class="h4">Dark mode</h2>
         <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p>
       </div>
-    </div> -->
+    </div>
   </div>
-</section>
+</section> -->
 {{ end }}
 
 {{ define "sidebar-footer" }}
