--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -17,11 +17,11 @@
 }
 .doks-subnavbar {
     position: fixed !important;  
-    right: 450px  !important;
     background-color: unset  !important;
     z-index: 10000  !important;
     border: none  !important;
     margin-top: 4px;
+    width: 100%;
 }
 
 .doks-subnavbar> input {
@@ -35,4 +35,9 @@
 .hero-heading{
     font-size: 140px !important;
     margin-bottom: 80px;
+}
+
+.doks-search{
+    margin-right: 140px !important;
+    margin-left: auto;
 }
