--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -1,29 +1,8 @@
 /** Custom styles */
 
 
-
-.navbar {
-    position: fixed;
-    width: 100%;
-    margin-top: 4px;
-    top: 0;
-}
-
-.header-bar{
-    position: fixed;
-    width: 100%;
-    z-index: 10000;
-    top: 0;
-}
-.doks-subnavbar {
-    margin-top: 64px;
-}
-
-.doks-subnavbar> input {
-    min-width: 400px;
-}
-
 .hero-heading{
     font-size: 140px !important;
+    margin-bottom: 80px;
     margin-bottom: 80px;
 }
